--- a/BoardGameKeeper/Views/GameListPage.xaml
+++ b/BoardGameKeeper/Views/GameListPage.xaml
@@ -6,10 +6,10 @@
              mc:Ignorable="d"
              x:Class="BoardGameKeeper.Views.GameListPage">
 
-	<ListView x:Name="GameListView"
-        ItemsSource="{Binding Games}"
+	<ListView x:Name="gameListView"
         ItemTapped="HandleGameTapped"
-        CachingStrategy="RecycleElement">
+        CachingStrategy="RecycleElement"
+		SelectionMode="None">
 
 		<ListView.ItemTemplate>
 			<DataTemplate>
@@ -18,7 +18,8 @@
 						<Label Text="{Binding Name}" />
 						<Label Text="In rotation" 
 							HorizontalOptions="End"/>
-						<CheckBox IsChecked="{Binding InRotation}" />
+						<CheckBox IsChecked="{Binding InRotation}" 
+							CheckedChanged="InRotationChanged" />
 					</StackLayout>
 				</ViewCell>
 			</DataTemplate>
